--- a/covid_data.ipynb
+++ b/covid_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9209/733057425.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_17360/733057425.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  movement = pd.read_csv('covid_data/movement.csv')\n"
      ]
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "[2094 rows x 5 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "[2142 rows x 4 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "[2562 rows x 4 columns]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
        "4  Afghanistan  AFG  2020-01-05                       0"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,14 +754,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9209/22741122.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_17360/22741122.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
        "[7322 rows x 4 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
        "[7322 rows x 4 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
        "[365 rows x 8 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1576,7 +1576,7 @@
        "[2562 rows x 8 columns]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1587,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1604,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1613,7 +1613,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1658,7 +1658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0 (default, Sep 13 2022, 10:24:03) \n[GCC 9.4.0]"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4,
   "vscode": {
