--- a/covid_data.ipynb
+++ b/covid_data.ipynb
@@ -45,7 +45,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_17360/733057425.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_31537/733057425.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  movement = pd.read_csv('covid_data/movement.csv')\n"
      ]
     }
@@ -761,7 +761,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_17360/22741122.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_31537/22741122.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -922,7 +922,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_stay.to_csv('covid_data/filtered_stay.csv')"
+    "# df_stay.to_csv('output_data/filtered_stay.csv')"
    ]
   },
   {
@@ -1591,7 +1591,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined_df.to_csv('covid_data/lockdown_severity.csv')"
+    "combined_df.to_csv('output_data/lockdown_severity.csv')"
    ]
   },
   {
@@ -1658,7 +1658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0 (default, Sep 13 2022, 10:24:03) \n[GCC 9.4.0]"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4,
   "vscode": {
